--- a/index.html
+++ b/index.html
@@ -76,5 +76,6 @@
 </head>
 <body class="bg-gray-100 font-display transition-colors duration-300">
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
