--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
 </head>
 <body class="bg-gray-100 font-display transition-colors duration-300">
     <div id="root"></div>
-   <script type="module" src="/src/index.tsx"></script>
+<script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
