--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </style>
 </head>
 <body class="bg-gray-100 font-display transition-colors duration-300">
-    <div id="root"></div>
-<script type="module" src="./src/index.tsx"></script>
+  <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
